tests/fixtures/valid/operator_unary_minus.torel
unit fixtures.operator_unary_minus;

export proc main() -> Int32 {
    -42
}
