tests/fixtures/invalid/operator_neg_bool.torel
unit fixtures.operator_neg_bool;

export proc main() -> Int32 {
    -true
}
